# api/bulletin.go
@@ -9,7 +9,15 @@ import (
 	"smartlab/serializer"
 )
 
-// BulletinCreate Bulletin创建
+// BulletinCreate godoc
+// @Summary BulletinCreate
+// @Description 创建公告，需要管理员权限。
+// @Accept  json
+// @Produce  json
+// @param BulletinIn body dto.BulletinIn true "dto.BulletinIn"
+// @Success 200 {array} model.Bulletin
+// @Security JWT
+// @Router /Bulletin [post]
 func BulletinCreate(c *gin.Context) {
 	bulletinIn := &dto.BulletinIn{}
 	var err error
@@ -31,4 +39,15 @@ func BulletinCreate(c *gin.Context) {
 
 	model.CreateBulletin(bulletin)
 	c.JSON(http.StatusOK, bulletin)
+}
+// BulletinReadAll godoc
+// @Summary BulletinReadAll
+// @Description 读取所有公告
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} model.Bulletin
+// @Router /Bulletin [get]
+func BulletinReadAll(c *gin.Context) {
+	bulletins := model.ReadAllBulletin()
+	c.JSON(http.StatusOK, bulletins)
 }
