# router/router.go
@@ -21,12 +21,15 @@ func NewRouter() *gin.Engine {
 		groupApi.POST("ping", api.Ping)
 		bulletin := groupApi.Group("Bulletin")
 		{
+			bulletin.GET("", api.BulletinReadAll)
+
 			auth := bulletin.Group("")
 			auth.Use(middleware.JwtMiddleware.MiddlewareFunc())
 			auth.Use(middleware.HasRole("admin"))
 			{
 				auth.POST("", api.BulletinCreate)
 			}
+
 		}
 		dataLog := groupApi.Group("DataLog")
 		{
